--- a/sass/elements/_headings.scss
+++ b/sass/elements/_headings.scss
@@ -70,10 +70,10 @@
 			font-size: 1.1em;
 		}
 	}
-	h6 {  //finances infographic titles
+	h6 {
 		@extend %heading;
 		color: $base-font-color;  //body color
-		font-size: 1em;
+		font-size: .95em;
 		line-height: 1.35em;
 	}
 }
