--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -53,14 +53,14 @@
 		}
 	}
 	.center-outer {
-		display: table;
-		width: 100%;
 		height: 100%;
+		width: 100%;
+		display: table;
 		position: relative;
 		
 		@media (min-width: 500px) {
-			height: 40vw;
 			min-height: 200px;
+			height: 40vw;
 		}
 		@include respond-from(md) {
 			height: 415px;
@@ -70,10 +70,10 @@
 		}
 	}
 	.center-inner {
-		display: table-cell;
-		width: 100%;
 		height: 100%;
+		width: 100%;
 		vertical-align: middle;
+		display: table-cell;
 		position: relative;
 	}
 
@@ -93,26 +93,18 @@
 			padding-left: 20px;
 			padding-right: 20px;
 		}
-		.infographics-container {
-			@extend .flex;
-			flex-direction: row;
-			justify-content: space-between;
-			
-			.infographic {
-				width: 125px;
-			}
+		.infographic {
+			width: 125px;
 		}
 		.info-numbers {
-			@extend .flex;
-			width: 80px;
+			@extend .col-flex;
 			height: 80px;
-			background-color: white;
-			border-radius: 50%;
+			width: 80px;
 			text-align: center;
-			flex-direction: column;
-			justify-content: center;
+			border-radius: 50%;
 			padding: 0;
 			margin: auto;
+			background-color: white;
 		}
 		p.caption {
 			color: white;
