--- a/sass/style.css
+++ b/sass/style.css
@@ -10,9 +10,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, hr, p, bl
   font: inherit;
   font-size: 100%;
   vertical-align: baseline;
-  margin: 0;
   padding: 0;
-  border: 0; }
+  border: 0;
+  margin: 0; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
@@ -78,25 +78,17 @@ sup {
 .accent-bg {
   background-color: #82786f; }
 
-.centered {
-  text-align: center; }
-
-.blue {
-  color: #00adef; }
-
-.cond {
-  font-family: "proxima-nova-alt-condensed", Helvetica, Arial, sans-serif; }
-
 .button {
   transition: background-color 0.2s ease-out;
   font-size: 0.95em;
-  color: white;
   text-decoration: none;
+  color: white;
   padding: 10px 20px;
+  display: inline-block;
   cursor: pointer; }
   .button:active, .button:focus, .button:hover {
-    color: white;
-    text-decoration: none; }
+    text-decoration: none;
+    color: white; }
 
 .button-blue {
   background-color: #00adef; }
@@ -135,19 +127,12 @@ sup {
     color: #82786f;
     background-color: #e8e8e8; }
 
-.padding-for-button {
-  padding-top: 30px;
-  padding-bottom: 30px; }
+p.button-container {
+  padding-top: 20px;
+  padding-bottom: 20px; }
   @media (max-width: 879px) {
-    .padding-for-button {
+    p.button-container {
       text-align: center; } }
-
-@media (max-width: 879px) {
-  .spotlight1 p.stacked-buttons {
-    margin-bottom: 10px; } }
-@media (min-width: 880px) {
-  .spotlight1 p.stacked-buttons {
-    margin-bottom: 5px; } }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "proxima-nova", Helvetica, Arial, sans-serif;
@@ -210,7 +195,7 @@ h5 {
 
 h6 {
   color: #82786f;
-  font-size: 1em;
+  font-size: .95em;
   line-height: 1.35em; }
 
 a {
@@ -220,23 +205,6 @@ a {
 
 p a {
   text-decoration: underline; }
-
-ul,
-ol {
-  padding-left: 18px; }
-
-@media (max-width: 879px) {
-  li {
-    font-size: 0.75em;
-    line-height: 1.3em; } }
-@media (min-width: 880px) {
-  li {
-    font-size: 0.8em;
-    line-height: 1.25em; } }
-@media (min-width: 1024px) {
-  li {
-    font-size: 0.95em;
-    list-style: disc; } }
 
 p {
   padding: 10px 0; }
@@ -297,46 +265,44 @@ section {
   padding-top: 40px;
   padding-bottom: 40px; }
 
-.flex, .flex-row, .flex-column, .hero-info .infographics-container, .hero-info .info-numbers {
+.flex, .row-flex, .col-flex, .hero-info .info-numbers, .blue-bar-graph {
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
+  display: flex; }
+
+.row-flex {
+  -webkit-flex-direction: row;
+  flex-direction: row;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between; }
-
-.flex-row {
-  flex-direction: row;
-  justify-content: space-between; }
   @media (max-width: 879px) {
-    .flex-row {
+    .row-flex {
       display: block; } }
 
-.flex-column {
+.col-flex, .hero-info .info-numbers {
+  -webkit-flex-direction: column;
   flex-direction: column;
+  -webkit-justify-content: center;
   justify-content: center; }
   @media (max-width: 879px) {
-    .flex-column {
+    .col-flex, .hero-info .info-numbers {
       display: block; } }
 
 @media (min-width: 880px) {
-  .column-2 {
+  .col-2 {
     width: 46.5%; } }
 
 @media (min-width: 880px) {
-  .column-3 {
+  .col-3 {
     width: 30.5%; } }
+
+@media (max-width: 879px) {
+  .hide-until-md {
+    display: none !important; } }
 
 @media (min-width: 880px) {
   .hide-from-md {
-    display: none !important; } }
-
-@media (max-width: 879px) {
-  .hide-to-md {
-    display: none !important; } }
-
-@media (max-width: 1023px) {
-  .hide-to-lg {
     display: none !important; } }
 
 .call-out {
@@ -356,9 +322,9 @@ section {
     background-color: #00adef; } }
 
 .nav {
-  position: relative;
   padding-top: 0;
-  padding-bottom: 0; }
+  padding-bottom: 0;
+  position: relative; }
   @media (max-width: 879px) {
     .nav {
       height: 110px; } }
@@ -367,9 +333,9 @@ section {
       height: 70px;
       max-width: 94vw; } }
   .nav li {
-    list-style-type: none;
     font-weight: 400;
-    font-size: 1em; }
+    font-size: 1em;
+    list-style-type: none; }
 
 .nav-logo {
   background: no-repeat #00adef url("../img/cv-logo.svg");
@@ -580,14 +546,14 @@ a.dropdown-toggle {
         margin-top: 240px; } }
 
 .center-outer {
-  display: table;
-  width: 100%;
   height: 100%;
+  width: 100%;
+  display: table;
   position: relative; }
   @media (min-width: 500px) {
     .center-outer {
-      height: 40vw;
-      min-height: 200px; } }
+      min-height: 200px;
+      height: 40vw; } }
   @media (min-width: 880px) {
     .center-outer {
       height: 415px; } }
@@ -596,10 +562,10 @@ a.dropdown-toggle {
       height: 375px; } }
 
 .center-inner {
-  display: table-cell;
-  width: 100%;
   height: 100%;
+  width: 100%;
   vertical-align: middle;
+  display: table-cell;
   position: relative; }
 
 @media (max-width: 879px) {
@@ -614,21 +580,16 @@ a.dropdown-toggle {
 .hero-info h5 {
   padding-left: 20px;
   padding-right: 20px; }
-.hero-info .infographics-container {
-  flex-direction: row;
-  justify-content: space-between; }
-  .hero-info .infographics-container .infographic {
-    width: 125px; }
+.hero-info .infographic {
+  width: 125px; }
 .hero-info .info-numbers {
-  width: 80px;
   height: 80px;
-  background-color: white;
-  border-radius: 50%;
+  width: 80px;
   text-align: center;
-  flex-direction: column;
-  justify-content: center;
+  border-radius: 50%;
   padding: 0;
-  margin: auto; }
+  margin: auto;
+  background-color: white; }
 .hero-info p.caption {
   color: white;
   text-align: center;
@@ -651,17 +612,15 @@ p.caption2 {
   font-size: 1.2em;
   font-weight: 600;
   color: #00adef;
-  height: 25px;
-  display: flex; }
+  height: 25px; }
 
 .intro-blue-bar {
   background-color: #00adef;
   height: 25px;
   display: inline-block; }
 
-.stats .padding-for-button,
-.stats .column-2,
-.stats .column-3,
+.stats .col-2,
+.stats .col-3,
 .stats p {
   text-align: center; }
 
@@ -687,43 +646,52 @@ p.caption2 {
     padding-top: 40px; } }
 
 .letter .executive-staff p {
-  padding: 0;
-  text-align: center; }
+  text-align: center;
+  padding: 0; }
   @media (max-width: 500px) {
     .letter .executive-staff p {
       text-align: left; } }
 
 .letter p.staff-footer {
   font-size: 0.6em;
-  clear: both;
+  text-align: center;
   padding-top: 55px;
   padding-bottom: 5px;
-  text-align: center; }
+  clear: both; }
   @media (max-width: 879px) {
     .letter p.staff-footer {
       display: none; } }
 
-#financials .column.hide-from-md {
-  padding-top: 20px;
-  width: 46.5%; }
-  @media (max-width: 550px) {
-    #financials .column.hide-from-md {
-      width: 100%; } }
+.spotlight1 p.button-container {
+  text-align: left;
+  padding: 0; }
+  @media (max-width: 879px) {
+    .spotlight1 p.button-container {
+      margin-bottom: 10px; } }
+  @media (min-width: 880px) {
+    .spotlight1 p.button-container {
+      margin-bottom: 5px; } }
+.spotlight1 .button {
+  width: 250px; }
+  @media (min-width: 1024px) {
+    .spotlight1 .button {
+      width: 280px; } }
+
 @media (max-width: 550px) {
   #financials .restack {
     display: block; } }
 
 .connect h2, .connect p {
-  color: white;
-  text-align: center; }
-.connect .flex-row {
+  text-align: center;
+  color: white; }
+.connect .row-flex {
   text-align: center; }
   @media (max-width: 1023px) {
-    .connect .flex-row {
+    .connect .row-flex {
       padding-left: 120px;
       padding-right: 120px; } }
   @media (min-width: 1024px) {
-    .connect .flex-row {
+    .connect .row-flex {
       padding-left: 150px;
       padding-right: 150px; } }
 .connect .fbk,
@@ -731,9 +699,9 @@ p.caption2 {
 .connect .linkd,
 .connect .insta,
 .connect .youtu {
-  margin-top: 10px;
-  width: 50px;
   height: 50px;
+  width: 50px;
+  margin-bottom: 10px;
   display: inline-block; }
   .connect .fbk:hover,
   .connect .twit:hover,
@@ -777,9 +745,9 @@ p.caption2 {
 .footer .linkd,
 .footer .insta,
 .footer .youtu {
-  margin-top: 10px;
-  width: 48px;
   height: 48px;
+  width: 48px;
+  margin-top: 20px;
   display: inline-block; }
   .footer .fbk:hover,
   .footer .twit:hover,
