--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@
 @import  "elements/headings";     // H1-H6
 @import  "elements/images";       // Images and figures
 @import  "elements/links";        // Links
-@import  "elements/lists";        // Lists
+//@import  "elements/lists";      // Lists
 @import  "elements/paragraphs";   // Paragraph level elements
 //@import  "elements/tables";     // Tables
 
@@ -30,6 +30,7 @@
 @import  "modules/intro";  				// Intro styles
 @import  "modules/stats";         // Stats styles
 @import  "modules/letter";        // Executive Letter styles
+@import  "modules/spotlight1";		// Spotlight1 styles
 @import  "modules/financials";    // Financials styles
 @import  "modules/connect";       // Connect styles
 @import  "modules/support";       // Support styles
@@ -47,7 +48,6 @@
 @include buttons;
 @include headings;
 @include links;
-@include lists;
 @include paragraphs;
 @include layout;
 @include callouts;
@@ -57,6 +57,7 @@
 @include intro;
 @include stats;
 @include letter;
+@include spotlight1;
 @include financials;
 @include connect;
 @include support;
