--- a/sass/style.css
+++ b/sass/style.css
@@ -677,9 +677,18 @@ p.caption2 {
     .spotlight1 .button {
       width: 280px; } }
 
-@media (max-width: 550px) {
-  #financials .restack {
-    display: block; } }
+#financials .restack {
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  @media (max-width: 550px) {
+    #financials .restack {
+      display: block; } }
+  @media (min-width: 550px) {
+    #financials .restack .col-2 {
+      width: 49%; } }
 
 .connect h2, .connect p {
   text-align: center;
