--- a/sass/modules/_financials.scss
+++ b/sass/modules/_financials.scss
@@ -2,23 +2,20 @@
 
 //Remember to @include mixin in style.scss
 @mixin financials {
-	#financials {
-		.restack {
-			-webkit-flex-direction: row;
-			flex-direction: row;
-			-webkit-justify-content: space-between;
-			-ms-flex-pack: justify;
-			justify-content: space-between;
-			
+	.restack {
+		@media (max-width: 550px) {
+			display: block;
+		}
+
+		.col-2 {
+			padding-top: 20px;
+
 			@media (max-width: 550px) {
-				display:block;
+				width: 100%;
 			}
-			
-			.col-2 {
-				@media (min-width: 550px) {
-					width: 49%;
-				}
-			}
+			@media (min-width: 550px) {
+				width: 48%;
+			}				
 		}
 	}
 }
